--- a/secao-2/svg_como_imagem.html
+++ b/secao-2/svg_como_imagem.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG como Imagem</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SVG como Imagem</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+    <body>
 
-    <h1>
-        SVG como Imagem
-    </h1>
+        <h1>
+            SVG como Imagem
+        </h1>
 
-    <img src="./alarm_clock.svg" alt="Relogio">
-    
-</body>
+        <img src="./alarm_clock.svg" alt="Relogio">
+
+        <div class="pros-cons">
+            <p class="good">Podem ser cacheadas</p>
+            <p class="bad">Sem interação de CSS</p>
+            <p class="bad">Sem edição no DOM</p>
+            <p class="medium">Animações só funcionam se estiverem dentro do SVG</p>
+        </div>
+        
+    </body>
 </html>
