--- a/secao-3/formas-basicas.html
+++ b/secao-3/formas-basicas.html
@@ -41,6 +41,13 @@
     <svg>
         <polygon points="50,5 100,5 125,30 125,80 100,105 50,105 25,80 25,30" fill="#000" stroke="red" stroke-width="4"/>
     </svg>
+
+    <h2>Path</h2>
+    <svg>
+        <path 
+        fill="none" stroke="#000" stroke-width="4"
+        d="M40,20 L40,80 A30,30 0 0,0 100,100 L120,80Z"/>
+    </svg>
     
 </body>
 </html>
