Seção 03 - Aula 17 - O elemento Path - Fixing

--- a/secao-3/formas-basicas.html
+++ b/secao-3/formas-basicas.html
@@ -19,12 +19,12 @@
 
     <h2>Circle</h2>
     <svg>
-        <circle cx="150" cy="70" r="25" style=""/>
+        <circle cx="150" cy="70" r="25"/>
     </svg>
 
     <h2>Ellipse</h2>
     <svg>
-        <ellipse cx="150" cy="75" rx="100" ry="50" style=""/>
+        <ellipse cx="150" cy="75" rx="100" ry="50"/>
     </svg>
 
     <h2>Line</h2>
@@ -34,7 +34,7 @@
 
     <h2>Polyline</h2>
     <svg>
-        <polyline points="0,40 40,40 40,80 80,80 80,120 120,120 120,160" fill="transparent" stroke="#000" stroke-width="4" style=""/>
+        <polyline points="0,40 40,40 40,80 80,80 80,120 120,120 120,160" fill="transparent" stroke="#000" stroke-width="4"/>
     </svg>
 
     <h2>Polygon</h2>
